--- a/src/eShop.MVC/Views/Shared/NotFound.cshtml
+++ b/src/eShop.MVC/Views/Shared/NotFound.cshtml
@@ -21,7 +21,7 @@
 
                     <h2 class="notfound-title">Page Not Found</h2>
                     <p class="notfound-subtitle">
-                        Looks like you lost successflly!
+                        Looks like you've successfully lost your way!
                         @* Looks like this page went shopping and never came back! *@
                         The page you're looking for doesn't exist or has been moved.
                     </p>
