--- a/src/eShop.MVC/Views/_ViewImports.cshtml
+++ b/src/eShop.MVC/Views/_ViewImports.cshtml
@@ -6,4 +6,6 @@
 @using eShop.BLL.Services.Abstraction;
 @using eShop.Core.Utilities;
 @using eShop.BLL.ViewModels.Product;
+@using eShop.BLL.ViewModels.Log;
+@using eShop.BLL.ViewModels.Dashboard;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
